trying to fix results mobile filters container overflow

--- a/client/src/components/Products/Results.css
+++ b/client/src/components/Products/Results.css
@@ -8,6 +8,7 @@
     width: 100%;
     position: relative;
     margin-top: .5rem;
+    overflow: hidden;
 }
 
 .results-container-center {
